force-app/main/default/objects/Titanic_Passenger__c/Titanic_Passenger__c.object-meta.xml
<CustomObject>
    <description>RMS Titanic passenger manifest (1,309 records). Includes survival outcome, demographics, ticket details, and derived categorical fields optimised for Sankey diagram exploration.</description>
    <label>Titanic Passenger</label>
    <nameField>
        <displayFormat>TP-{0000}</displayFormat>
        <label>Passenger Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Titanic Passengers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>