force-app/main/default/objects/Titanic_Passenger__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Passenger age at the time of the voyage (decimal for infants)</description>
    <label>Age</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>