force-app/main/default/objects/Titanic_Passenger__c/fields/Age_Group__c.field-meta.xml
<CustomField>
    <fullName>Age_Group__c</fullName>
    <description>Age bracket derived from passenger age</description>
    <label>Age Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Child</fullName><default>false</default><label>Child</label></value>
            <value><fullName>Teen</fullName><default>false</default><label>Teen</label></value>
            <value><fullName>Young Adult</fullName><default>false</default><label>Young Adult</label></value>
            <value><fullName>Middle Aged</fullName><default>false</default><label>Middle Aged</label></value>
            <value><fullName>Senior</fullName><default>false</default><label>Senior</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>