force-app/main/default/objects/Titanic_Passenger__c/fields/Cabin__c.field-meta.xml
<CustomField>
    <fullName>Cabin__c</fullName>
    <description>Cabin number or numbers assigned to the passenger</description>
    <label>Cabin</label>
    <length>30</length>
    <type>Text</type>
</CustomField>