force-app/main/default/objects/Titanic_Passenger__c/fields/Deck__c.field-meta.xml
<CustomField>
    <fullName>Deck__c</fullName>
    <description>Ship deck derived from the first letter of the cabin number</description>
    <label>Deck</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>A</fullName><default>false</default><label>A</label></value>
            <value><fullName>B</fullName><default>false</default><label>B</label></value>
            <value><fullName>C</fullName><default>false</default><label>C</label></value>
            <value><fullName>D</fullName><default>false</default><label>D</label></value>
            <value><fullName>E</fullName><default>false</default><label>E</label></value>
            <value><fullName>F</fullName><default>false</default><label>F</label></value>
            <value><fullName>G</fullName><default>false</default><label>G</label></value>
            <value><fullName>T</fullName><default>false</default><label>T</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>