force-app/main/default/objects/Titanic_Passenger__c/fields/Family_Group__c.field-meta.xml
<CustomField>
    <fullName>Family_Group__c</fullName>
    <description>Family size category derived from siblings/spouses + parents/children counts</description>
    <label>Family Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Solo</fullName><default>false</default><label>Solo</label></value>
            <value><fullName>Small Family</fullName><default>false</default><label>Small Family</label></value>
            <value><fullName>Large Family</fullName><default>false</default><label>Large Family</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>