force-app/main/default/objects/Titanic_Passenger__c/fields/Fare__c.field-meta.xml
<CustomField>
    <fullName>Fare__c</fullName>
    <description>Ticket fare paid in British pounds</description>
    <label>Fare</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>