force-app/main/default/objects/Titanic_Passenger__c/fields/Fare_Category__c.field-meta.xml
<CustomField>
    <fullName>Fare_Category__c</fullName>
    <description>Fare price bracket derived from ticket fare</description>
    <label>Fare Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Budget</fullName><default>false</default><label>Budget</label></value>
            <value><fullName>Standard</fullName><default>false</default><label>Standard</label></value>
            <value><fullName>Premium</fullName><default>false</default><label>Premium</label></value>
            <value><fullName>Luxury</fullName><default>false</default><label>Luxury</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>