force-app/main/default/objects/Titanic_Passenger__c/fields/Had_Lifeboat__c.field-meta.xml
<CustomField>
    <fullName>Had_Lifeboat__c</fullName>
    <description>Whether the passenger was assigned to a lifeboat</description>
    <label>Had Lifeboat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>