force-app/main/default/objects/Titanic_Passenger__c/fields/Home_Destination__c.field-meta.xml
<CustomField>
    <fullName>Home_Destination__c</fullName>
    <description>Passenger home city or intended destination</description>
    <label>Home / Destination</label>
    <length>100</length>
    <type>Text</type>
</CustomField>