force-app/main/default/objects/Titanic_Passenger__c/fields/Lifeboat__c.field-meta.xml
<CustomField>
    <fullName>Lifeboat__c</fullName>
    <description>Lifeboat number or letter the passenger was rescued in</description>
    <label>Lifeboat</label>
    <length>10</length>
    <type>Text</type>
</CustomField>