force-app/main/default/objects/Titanic_Passenger__c/fields/Parents_Children__c.field-meta.xml
<CustomField>
    <fullName>Parents_Children__c</fullName>
    <description>Number of parents or children aboard</description>
    <label>Parents / Children</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>