force-app/main/default/objects/Titanic_Passenger__c/fields/Passenger_Name__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Name__c</fullName>
    <description>Full passenger name as recorded on the manifest</description>
    <label>Passenger Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>