force-app/main/default/objects/Titanic_Passenger__c/fields/Port_of_Embarkation__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Embarkation__c</fullName>
    <description>Port where the passenger boarded the Titanic</description>
    <label>Port of Embarkation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Southampton</fullName><default>false</default><label>Southampton</label></value>
            <value><fullName>Cherbourg</fullName><default>false</default><label>Cherbourg</label></value>
            <value><fullName>Queenstown</fullName><default>false</default><label>Queenstown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>