force-app/main/default/objects/Titanic_Passenger__c/fields/Sex__c.field-meta.xml
<CustomField>
    <fullName>Sex__c</fullName>
    <description>Passenger sex</description>
    <label>Sex</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Male</fullName><default>false</default><label>Male</label></value>
            <value><fullName>Female</fullName><default>false</default><label>Female</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>