force-app/main/default/objects/Titanic_Passenger__c/fields/Siblings_Spouses__c.field-meta.xml
<CustomField>
    <fullName>Siblings_Spouses__c</fullName>
    <description>Number of siblings or spouses aboard</description>
    <label>Siblings / Spouses</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>