force-app/main/default/objects/Titanic_Passenger__c/fields/Survived__c.field-meta.xml
<CustomField>
    <fullName>Survived__c</fullName>
    <description>Whether the passenger survived the sinking</description>
    <label>Survived</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>