force-app/main/default/objects/Titanic_Passenger__c/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <description>Ticket number or identifier</description>
    <label>Ticket Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>