force-app/main/default/objects/Titanic_Passenger__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Honorific title extracted and normalised from the passenger name</description>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Mr</fullName><default>false</default><label>Mr</label></value>
            <value><fullName>Mrs</fullName><default>false</default><label>Mrs</label></value>
            <value><fullName>Miss</fullName><default>false</default><label>Miss</label></value>
            <value><fullName>Master</fullName><default>false</default><label>Master</label></value>
            <value><fullName>Dr</fullName><default>false</default><label>Dr</label></value>
            <value><fullName>Officer</fullName><default>false</default><label>Officer</label></value>
            <value><fullName>Clergy</fullName><default>false</default><label>Clergy</label></value>
            <value><fullName>Titled</fullName><default>false</default><label>Titled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>