force-app/main/default/objects/Titanic_Passenger__c/fields/Travel_Class__c.field-meta.xml
<CustomField>
    <fullName>Travel_Class__c</fullName>
    <description>Passenger ticket class (First, Second, or Third)</description>
    <label>Travel Class</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>First</fullName><default>false</default><label>First</label></value>
            <value><fullName>Second</fullName><default>false</default><label>Second</label></value>
            <value><fullName>Third</fullName><default>false</default><label>Third</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>